<resources>
    <string name="app_name">AppTua</string>
    <string name="diego">Diego é uma espécie de Batman no universo de Umbrella Academy. Sombrio e sempre preparado para qualquer adversidade, Diego consegue segurar o ar embaixo d’água por um longo período e tem uma grande habilidade com facas. O Número 2 é o mais rebelde do grupo e tem sérios problemas com Luther.</string>
    <string name="luther">Luther é o líder da equipe criada pelo Sr Hargreeves. Ele conta com super-força \ne, desde de pequeno, sonha em viajar para o espaço. Ele sofre um acidente que destrói seu corpo e, por isso, acaba acoplado a um corpo de gorila. Na série o personagem é interpretado por Tom Hopper.</string>
    <string name="klaus">Klaus é capaz de conversar com os mortos e ainda conta com poderes como a capacidade de levitar e telecinese um poder que nem ele mesmo sabe a extensão. Por conta de sua ligação com o outro mundo, ele é incapaz de morrer o que o tornou um viciado em drogas. Na série o personagem é interpretado por Robert Sheehan.</string>
    <string name="ben">Quando a história do grupo adulto começa, Ben já está morto. Ele contava com monstros de outra dimensão sob sua pele e acabou morrendo durante uma missão, óbito que assombra Spaceboy até os dias atuais. Na entrada da Umbrella Academy há uma estátua em sua homenagem. Na série é interpretado por Justin H. Min.</string>
    <string name="alisson">Alisson tem a capacidade de alterar a realidade ao mentir. Depois de sair da Umbrella Academy, ela casou com seu namorado, Patrick, e teve uma filha chamada Claire. Contudo, eventualmente ela se divorciou e seu ex-marido ficou com a custódia de sua filha. Ela e Spaceboy vivem um amor mal resolvido.</string>
    <string name="switch1">ATIVAR HABILIDADE</string>
    <string name="victor">Vanya inicialmente não conta com poderes e é constantemente humilhada por Hargreeves – que a impede de lutar ao lado de seus irmãos. A garota tem grande habilidade no violino e, no dia em que conhece o Condutor, verá sua vida se transformar. Na série a personagem é interpretada por Ellen Page.</string>

    <string name= "titulo"> THE UMBRELLA ACADEMY</string>

    <string name="txtreginaldo">REGINALDO</string>

    <string name="cinco">Cinco tem a capacidade de viajar no tempo e, aos 10 anos, desapareceu pois decidiu fugir de casa indo para o futuro. Mais de 50 anos se passaram quando já era um senhor de 60 anos de idade. Ele cai na época em que seus irmãos adotivos estão com 30 anos, mas uma anomalia no tempo fez com que ele ficasse preso em um corpo de 13 anos</string>

    <string name="txtseis">SEIS</string>
    <string name="txtforca">FORÇA</string>
    <string name="txtben">BEN</string>
    <string name="txtforcaben">FORÇA</string>
    <string name="txtinteligenciaben">INTELIGÊNCIA</string>
    <string name="txtvelocidade">VELOCIDADE</string>
    <string name="txtinteligencia">INTELIGÊNCIA</string>
    <string name="txthabilidade">HABILIDADE</string>

    <string name="txtnumerocinco">NÚMERO</string>
    <string name="txtcinco">CINCO</string>
    <string name="txtforcacinco">FORÇA</string>
    <string name="txtinteligenciacinco">INTELIGÊNCIA</string>
    <string name="txthabilidadecinco">HABILIDADE</string>
    <string name="txtvelocidadecinco">VELOCIDADE</string>


    <string name="txtnomeum">NÚMERO</string>
    <string name="txtum">UM</string>
    <string name="txtluther">LUTHER</string>
    <string name="txtforcaluther">FORÇA</string>
    <string name="txtvelocidadeluther">VELOCIDADE</string>
    <string name="txtinteligencialuther">INTELIGÊNCIA</string>
    <string name="txhabilidadeluther">HABILIDADE</string>

    <string name="txtnumeroklaus">NÚMERO</string>
    <string name="txtnumeroquatro">QUATRO</string>
    <string name="txtklaus">KLAUS</string>
    <string name="txtforcaklaus">FORÇA</string>
    <string name="txtvelocidadeklaus">VELOCIDADE</string>
    <string name="txtinteligenciaklaus">INTELIGÊNCIA</string>
    <string name="txthabilidadeklaus">HABILIDADE</string>

    <string name="txtnumeroalisson">NÚMERO</string>
    <string name="txtnumerotres">TRÊS</string>
    <string name="txtalisson">ALISSON</string>
    <string name="txtforcaalisson">FORÇA</string>
    <string name="txtvelocidadealisson">VELOCIDADE</string>
    <string name="txtinteligenciaalisson">INTELIGÊNCIA</string>
    <string name="txthabilidadealisson">HABILIDADE</string>

    <string name="txtnumerodois">NÚMERO</string>
    <string name="txtdois">DOIS</string>
    <string name="txtdiego">DIEGO</string>
    <string name="txtforcadiogo">FORÇA</string>
    <string name="txtvelocidadediogo">VELOCIDADE</string>
    <string name="txtinteligenciadiogo">INTELIGÊNCIA</string>
    <string name="txthabilidadediogo">HABILIDADE</string>

    <string name="txtnumerosete">NÚMERO</string>
    <string name="txtsete">SETE</string>
    <string name="txtvanya">VANYA</string>
    <string name="txtforcavanya">FORÇA</string>
    <string name="txtvelocidadevanya">VELOCIDADE</string>
    <string name="txtinteligenciavanya">INTELIGÊNCIA</string>
    <string name="txthabilidadevanya">HABILIDADE</string>



</resources>

