<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".luther">

    <View
        android:id="@+id/view"
        android:layout_width="487dp"
        android:layout_height="59dp"
        android:background="@drawable/borda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.005"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imgbtnpersonagem"
        android:layout_width="78dp"
        android:layout_height="88dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.015"
        app:srcCompat="@drawable/menupersonagens"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imgbtnhome"
        android:layout_width="74dp"
        android:layout_height="95dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.022"
        app:srcCompat="@drawable/menuhome"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="94dp"
        android:layout_height="113dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.035"
        app:srcCompat="@drawable/menuabout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/logotela1" />


    <ImageButton
        android:id="@+id/imgbtnvoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/voltar"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="115dp"
        android:background="@null"
        android:fontFamily="@font/font1"
        android:text="@string/txtnomeum"
        android:textColor="#FFFF"
        android:textSize="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="184dp"
        android:layout_height="87dp"
        android:background="@null"
        android:fontFamily="@font/font1"
        android:text="@string/txtum"
        android:textColor="#ec1a1a"
        android:textSize="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="184dp"
        android:layout_height="87dp"
        android:background="@null"
        android:fontFamily="@font/font1"
        android:text="@string/txtluther"
        android:textColor="#ffff"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="394dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/one"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view5"
        android:layout_width="140dp"
        android:layout_height="7dp"
        android:background="@drawable/dordavermelha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <View
        android:id="@+id/view1"
        android:layout_width="140dp"
        android:layout_height="7dp"
        android:background="@drawable/dordavermelha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="451dp"
        android:layout_height="205dp"
        android:background="@null"
        android:fontFamily="@font/font2"
        android:gravity="center"
        android:text="@string/luther"
        android:textColor="#ffff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="510dp"
        android:layout_height="209dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="165dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#6B1E1E1E"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/iconforca" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/font2"
                        android:text="@string/txtforcaluther"
                        android:textColor="#FFFF"
                        android:textSize="22sp" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="120dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dordavermelha"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="165dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#6B1E1E1E"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/iconrun" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/font2"
                        android:text="@string/txtvelocidadeluther"
                        android:textColor="#FFFF"
                        android:textSize="22sp" />

                    <View
                        android:id="@+id/view12"
                        android:layout_width="120dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dordavermelha"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/view13"
                        android:layout_width="90dp"
                        android:layout_height="4dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="-5dp"
                        android:background="@drawable/bordabranca"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="165dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#6B1E1E1E"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/iconbrain" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/font2"
                        android:text="@string/txtinteligencialuther"
                        android:textColor="#FFFF"
                        android:textSize="22sp" />

                    <View
                        android:id="@+id/view10"
                        android:layout_width="120dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/dordavermelha"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/view14"
                        android:layout_width="110dp"
                        android:layout_height="4dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="-5dp"
                        android:background="@drawable/bordabranca"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="165dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#6B1E1E1E"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/iconhability" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/font2"
                        android:text="@string/txhabilidadeluther"
                        android:textColor="#FFFF"
                        android:textSize="22sp" />

                    <View
                        android:id="@+id/view7"
                        android:layout_width="120dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dordavermelha"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/view15"
                        android:layout_width="65dp"
                        android:layout_height="4dp"
                        android:layout_marginLeft="28dp"
                        android:layout_marginTop="-5dp"
                        android:background="@drawable/bordabranca"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.436"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
